# kito

./: .gitignore  .prettierrc  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING_ES.md  CONTRIBUTING_FR.md  CONTRIBUTING_IT.md  CONTRIBUTING_PT.md  Cargo.toml  README.md  README_ES.md  README_FR.md  README_IT.md  README_PT.md  biome.json  cliff.toml  code_of_conduct.md  contributing.md  deno.json  flake.nix  lefthook.yml  license  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  readme.md  tree.txt  tsconfig.base.json  tsconfig.json
.github/workflows/: CI.yml  benchmarks.yml  ci.yml  doc-deploy.yml  release.yml
bench/: bun.lockb  config.ts  consts.js  package.json  readme.md  runBench.ts  start.js  tsconfig.json
bench/results/: comparison-bun.json  comparison-node.json
bench/servers/: express.mjs  fastify.ts  hapi.ts  hono.ts  kito.ts  koa.ts  polka.ts  rayo.ts  restify.ts  tinyhttp.ts
bench/utils/: benchmark.js  chart.js  chart.ts  frameworkRunner.ts  http.ts  server.js  wait.ts
cli/: Cargo.toml  package.json
cli/src/: commands.rs
docs/english/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/español/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/francais/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/français/: CONTRIBUTING.md  README.md
docs/italiano/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/portugues/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
docs/português/: CONTRIBUTING.md  README.md
examples/: basic.ts  middlewares.ts  package.json  params.ts  run-example.ts  runExample.ts  schema.ts  tsconfig.json
examples/fluent/: basic.ts  extend.ts  file.ts  params.ts  route.ts  unixSocket.ts
examples/src/: file.ts  (+13 more)
rs_lib/: Cargo.toml
scripts/: postinstall.mjs
src/: error.rs  lib.rs  schema.rs  server.rs
web/: astro.config.mjs  package.json
(+110 files in other folders)
