[package]
name = "kito"
description = "A web framework written in Rust for TypeScript"
version = "0.1.0"
authors = ["Nehuén <https://github.com/nehu3n>"]
repository = "https://github.com/nehu3n/kito"
license = "MIT"
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
actix-web = "4"
lazy_static = "1.5.0"
num_cpus = "1.16.0"
serde_json = "1.0.138"

[profile.release]
opt-level = 3
