[package]
name = "kito"
description = "A web framework written in Rust for TypeScript"
version = "0.1.0"
authors = ["Nehuén <https://github.com/nehu3n>"]
repository = "https://github.com/nehu3n/kito"
license = "MIT"
readme = "README.md"
edition = "2021"

[lib]
name = "libkito"
crate-type = ["cdylib"]

[dependencies]
actix-web = "4"
num_cpus = "1.16.0"
regex = "1.11.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
