[package]
name = "kito"
description = "A web framework written in Rust for TypeScript"
version = "0.1.0"
authors = ["Nehuén <https://github.com/nehu3n>"]
repository = "https://github.com/kitojs/kito"
license = "MIT"
readme = "README.md"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
actix-web = "4"
num_cpus = "1.16.0"
regex = "1.11.1"
rmp-serde = "1.3.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
thiserror = "2.0.12"
napi = { version = "2.12.2", default-features = false, features = ["napi4"] }
napi-derive = "2.12.2"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
opt-level = 3
codegen-units = 1
lto = "fat"
strip = true
panic = "abort"
